# English_helper_bot_public

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py
src/app/: __init__.py  config.py  di.py  main.py
src/bot/: router.py
src/bot/handlers/: libraries.py  main_menu.py  progress.py  task_flow.py
src/bot/middleware/: error_handler.py  state_loader.py
src/bot/ui/: __init__.py  callback_data.py  keyboards.py  renderers.py
src/core/models/: __init__.py  bot_state.py  library_info.py  progress.py  score.py  task.py  user_event.py
src/core/ports/: __init__.py  bot_state_store.py  event_store.py  library_registry.py  scorer.py
src/core/services/: __init__.py  progress_service.py  scoring_service.py  task_session.py
src/core/utils/: __init__.py  ids.py  text.py  time.py
src/infra/libraries/: __init__.py  json_loader.py  module.py  task_library.py  task_library_registry.py
src/infra/scoring/: __init__.py  answer_key.py  llm_scorer.py  personality_quiz.py  prompt_templates.py  rule_scorer.py
src/infra/storage/: __init__.py  file_bot_state_store.py  file_event_store.py  paths.py
src/libraries/demo_english/: library.json
src/libraries/demo_english/modules/grammar/: module.json
src/libraries/demo_english/modules/grammar/tasks/: task_001.json
src/libraries/demo_english/modules/vocabulary/: module.json
src/libraries/demo_english/modules/vocabulary/tasks/: task_001.json
src/utils/: __init__.py  telegram.py
